# luckytask

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  config.json  docker-compose.yml  pyproject.toml
src/: main.py
src/adapters/: redis_client.py
src/cli/: cli.py  context.py
src/cli/commands/: add_task.py  config_redis.py  delete_task.py  get_by_priority.py  get_by_priority_range.py  list_tasks.py  update_task.py
src/entities/: task.py
src/repositories/: base_repository.py  fake_repository.py  redis_repository.py
src/services/: task_service.py
src/utils/: config_handler.py  emoji.py  exceptions.py
tests/: conftest.py  test_task.py  test_task_service.py
