[tool.poetry]
name = "luckytask"
version = "0.1.0"
description = "Helps to manage your tasks"
authors = ["oldcorvus <moelcrow@gmail.com>"]
readme = "README.md"
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.7.4"
pre-commit = "^3.7.1"
redis = "^5.0.6"
click = "^8.1.7"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
mypy = "^1.10.0"
flake8 = "^7.1.0"
isort = "^5.13.2"
black = "^24.4.2"
pylint = "^3.2.3"
ruff = "^0.4.10"
pytest = "^8.2.2"
types-redis = "^4.6.0.20240425"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
luckytask = "src.main:cli"